fix white spaces in mobile view

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,13 +33,7 @@ body {
 }
 
 body {
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
   background-color: var(--color-bg);
   color: var(--color-text);
   line-height: 1.5;
@@ -58,5 +52,9 @@ app-root {
 
   .p-listbox-list-container {
     width: 100% !important;
+  }
+
+  .p-hidden-accessible {
+    display: none !important;
   }
 }
